--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>Pixabay gallery</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="shortcut icon" href="./images/find.ico" />
   </head>
   <body>
     <form class="search-form" id="search-form">
@@ -15,8 +15,14 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button type="submit" class="search-button">Search</button>
     </form>
-    <!-- <include src="./partials/example.html"></include> -->
+
+    <div class="gallery"></div>
+    <button type="button" class="load-more visually-hidden">Load more</button>
+
+        <script type="module" src="./index.js"></script>
+
+        <!-- <include src="./partials/gallery.html"></include> -->
   </body>
 </html>
